--- a/navbar-scroll.less
+++ b/navbar-scroll.less
@@ -86,6 +86,8 @@
                     border-left: none;
                     border-right: none;
                     border-bottom: none;
+                    padding-left: 20px;
+                    .border-top-radius(0);
                     .box-shadow(none);
                 }
 
